2008-01-29  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html: Added number suffix documentation.

2008-01-12  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/*.html: Fixed some spelling mistakes.  Thanks to
	Norbert!

2007-12-31  Stefan Jahn  <stefan@lkcc.org>

	* docs/ru/mathfunc.html: Updated Russian translations.

2007-11-03  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/mathfunc.html: Reordered math functionality.  Thanks to
	Gunther.

	* docs/en/mathfunc.html: Added descriptions of logical operators.

2007-11-01  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html: Documented new functions StabMeasure()
	and StabFactor().  Fixed phase()-link.

2007-10-27  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html: Reordered math functionality.  Thanks to
	Gunther.

2007-09-26  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html, docs/de/mathfunc.html: Documented random
	functions as well as general nomenclature for real and complex
	numbers, vectors and matrices.

2007-08-16  Stefan Jahn  <stefan@lkcc.org>

	* docs/uk/index.html: Updated Ukrainian translations.

2007-06-16  Stefan Jahn  <stefan@lkcc.org>

	* docs/uk/start.html: Added Ukrainian translations of the internal
	help system.

2007-05-24  Stefan Jahn  <stefan@lkcc.org>

	* docs/en/mathfunc.html, docs/de/mathfunc.html: Documented the new
	constant "q" and the vt() function.

2007-03-31  Stefan Jahn  <stefan@lkcc.org>

	* docs/qucsveri.1: Added manpage for the qucsveri wrapper
	script for digital simulations.

2007-03-13  Stefan Jahn  <stefan@lkcc.org>

	* docs/ru/start_opt.html: Added Russian translations of
	optimization dialogs.

2007-03-04 Gopala Krishna <krishna.ggk@gmail.com>

	* qucshelp.cpp, qucshelp.h: Fixed few crashes and navigation bugs.

2007-03-04  Stefan Jahn  <stefan@lkcc.org>

	* docs/de/start_opt.html: Translated optimization introduction
	into German.

2006-08-26  Stefan Jahn  <stefan@lkcc.org>

	* qucshelp.cpp (setupActions): Made some more user visible