@@ -1442,7 +1442,108 @@ m&ouml;gliche Werte f&uuml;r <tt>von</tt> und <tt>nach</tt> sind "Y", "Z", "H", 
 	<TR><TD WIDTH=25% VALIGN="baseline"><TT>[11,12;21,22]</TT></TD><TD WIDTH=75% VALIGN="baseline">Matrix</TD></TR>
 </TABLE>
 
-<H3>Wertenamen </H3>
+<H3>Zahlenendungen</H3>
+<TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=0>
+	<COL WIDTH=43*><COL WIDTH=213*>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>E</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			exa, * 1e+18
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>P</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			peta, * 1e+15
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>T</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			tera, * 1e+12
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>G</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			giga, * 1e+9
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>M</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			mega, * 1e+6
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>k</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			kilo, * 1e+3
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>m</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			milli, * 1e-3
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>u</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			micro, * 1e-6
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>n</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			nano, * 1e-9
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>p</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			pico, * 1e-12
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>f</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			femto, * 1e-15
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>a</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			atto, * 1e-18
+		</TD>
+	</TR>
+</TABLE>
+
+<H3>Wertenamen</H3>
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=0>
 	<COL WIDTH=43*><COL WIDTH=213*>
 	<TR>
