@@ -1450,6 +1450,22 @@ Mathematical Functions</H3>
 	<COL WIDTH=43*><COL WIDTH=213*>
 	<TR>
 		<TD WIDTH=25% VALIGN="baseline">
+			<TT>E</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			exa, * 1e+18
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
+			<TT>P</TT>
+		</TD>
+		<TD WIDTH=75% VALIGN="baseline">
+			peta, * 1e+15
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=25% VALIGN="baseline">
 			<TT>T</TT>
 		</TD>
 		<TD WIDTH=75% VALIGN="baseline">
