@@ -1,3 +1,8 @@
+2008-02-17  Stefan Jahn  <stefan@lkcc.org>
+
+	* qucsdigi: Using libtool instead of freehdl-libtool for linking
+	FreeHDL binaries.
+
 2008-02-15  Stefan Jahn  <stefan@lkcc.org>
 
 	* Fixed some compile warnings for g++ 4.3 version.
